--- a/package.json
+++ b/package.json
@@ -100,5 +100,9 @@
       "no-eq-null": 2,
       "no-unused-expressions": 0
     }
+  },
+  "dependencies": {
+    "@amcharts/amcharts5": "^5.10.0",
+    "@amcharts/amcharts5-geodata": "^5.1.4"
   }
 }
