with all changes

--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
   "dependencies": {
     "@amcharts/amcharts5": "^5.10.0",
     "@amcharts/amcharts5-geodata": "^5.1.4",
-    "katex": "^0.16.11"
+    "katex": "^0.16.11",
+    "mathjax": "^3.2.2"
   }
 }
